// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rss reader should update articles by timeout 1`] = `
"<li class=\\"list-group-item\\">
  <h4>Новые уроки на Хекслете</h4>Практические уроки по программированию
</li>"
`;

exports[`rss reader should update articles by timeout 2`] = `
"<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/main/lessons/functional-contest-03-2015/theory_unit\\">Ареалы проживания членистоногих. Конкурс по функциональному программированию 03.2015. / Главные испытания</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/frameworks/lessons/rails_getting_started/theory_unit\\">Rails для начинающих / Фреймворки</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/main/lessons/pipeline/theory_unit\\">Pipeline challenge / Главные испытания</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-setup-environment/lessons/npx/theory_unit\\">NPX / JS: Настройка окружения</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-setup-environment/lessons/dependencies/theory_unit\\">Зависимости / JS: Настройка окружения</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-setup-environment/lessons/publish/theory_unit\\">Публикация пакета / JS: Настройка окружения</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/async-await/theory_unit\\">Async/Await / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/new-promise/theory_unit\\">new Promise / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/promises-catch/theory_unit\\">Обработка ошибок в промисах / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/promise-all/theory_unit\\">Promise.all / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>"
`;

exports[`rss reader should update articles by timeout 3`] = `
"<li class=\\"list-group-item\\">
  <h4>Новые уроки на Хекслете</h4>Практические уроки по программированию
</li>"
`;

exports[`rss reader should update articles by timeout 4`] = `
"<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/main/lessons/physics\\">Почему эксперментально верифицируема суспензия?</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/frameworks/lessons/rails_unit\\">Ультрафиолетовый взрыв: зеркало или темная материя?</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/main/lessons/functional-contest-03-2015/theory_unit\\">Ареалы проживания членистоногих. Конкурс по функциональному программированию 03.2015. / Главные испытания</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/frameworks/lessons/rails_getting_started/theory_unit\\">Rails для начинающих / Фреймворки</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/main/lessons/pipeline/theory_unit\\">Pipeline challenge / Главные испытания</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-setup-environment/lessons/npx/theory_unit\\">NPX / JS: Настройка окружения</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-setup-environment/lessons/dependencies/theory_unit\\">Зависимости / JS: Настройка окружения</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-setup-environment/lessons/publish/theory_unit\\">Публикация пакета / JS: Настройка окружения</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/async-await/theory_unit\\">Async/Await / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/new-promise/theory_unit\\">new Promise / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/promises-catch/theory_unit\\">Обработка ошибок в промисах / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>
<div class=\\"list-group-item\\">
  <h4><a target=\\"_blank\\" href=\\"https://ru.hexlet.io/courses/js-asynchronous-programming/lessons/promise-all/theory_unit\\">Promise.all / JS: Асинхронное программирование</a></h4><button type=\\"button\\" class=\\"btn btn-primary js-show-article-modal-button\\" data-target=\\"#articleDescriptionModal\\" data-toggle=\\"modal\\">More</button>
</div>"
`;
